unpackaged/main/default/objects/Billing_Account__c/Billing_Account__c.object-meta.xml
<CustomObject>
    <label>Finance Account</label>
    <nameField>
        <label>Finance Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finance Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>