unpackaged/main/default/objects/Billing_Account__c/fields/Authorized_Payment_Use__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Payment_Use__c</fullName>
    <inlineHelpText>The authorized use of this Billing Account for payments</inlineHelpText>
    <label>Authorized Payment Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Recurring Billing</fullName>
            </value>
            <value>
                <fullName>On Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>