unpackaged/main/default/objects/Billing_Account__c/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>