unpackaged/main/default/objects/Billing_Account__c/fields/Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Province__c</fullName>
    <label>State/Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>