unpackaged/main/default/objects/Billing_Account__c/fields/Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street__c</fullName>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>