unpackaged/main/default/objects/Billing_Account__c/fields/Billing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Postal_Code__c</fullName>
    <label>Zip/Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>