unpackaged/main/default/objects/Billing_Account__c/fields/BillingAccountID_18__c.field-meta.xml
<CustomField>
    <fullName>BillingAccountID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Account ID(18)</label>
    <type>Text</type>
</CustomField>