unpackaged/main/default/objects/Billing_Account__c/fields/Card_Expires_On__c.field-meta.xml
<CustomField>
    <fullName>Card_Expires_On__c</fullName>
    <inlineHelpText>Date the credit card is no longer valid - the 1st of the month following the expiration month and year.</inlineHelpText>
    <label>Card Expires On</label>
    <type>Date</type>
</CustomField>