unpackaged/main/default/objects/Billing_Account__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <inlineHelpText>Type of credit card - Master Card, Visa, American Express, etc.</inlineHelpText>
    <label>Card Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>