unpackaged/main/default/objects/Billing_Account__c/fields/Cardholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Cardholder_Name__c</fullName>
    <inlineHelpText>Name on Credit Card</inlineHelpText>
    <label>Cardholder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>