unpackaged/main/default/objects/Billing_Account__c/fields/Credit_Card_Authorization_Form2__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Authorization_Form2__c</fullName>
    <label>Credit Card Authorization Form2</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>