unpackaged/main/default/objects/Billing_Account__c/fields/Credit_Card_Authorization_Form__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Authorization_Form__c</fullName>
    <inlineHelpText>Link to remote drive containing digital version of CC Authorization Form</inlineHelpText>
    <label>Credit Card Authorization Form</label>
    <type>Url</type>
</CustomField>