unpackaged/main/default/objects/Billing_Account__c/fields/CZ_CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CZ_CustomerId__c</fullName>
    <externalId>true</externalId>
    <label>CZ CustomerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>