unpackaged/main/default/objects/Billing_Account__c/fields/Delivery_Preference__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Preference__c</fullName>
    <inlineHelpText>How would the client like to be contacted regarding invoices and receipts</inlineHelpText>
    <label>Delivery Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>