unpackaged/main/default/objects/Billing_Account__c/fields/Last_4__c.field-meta.xml
<CustomField>
    <fullName>Last_4__c</fullName>
    <inlineHelpText>Last 4 digits of credit card for this payment method</inlineHelpText>
    <label>Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>