unpackaged/main/default/objects/Billing_Account__c/fields/Manual_Invoice_Required__c.field-meta.xml
<CustomField>
    <fullName>Manual_Invoice_Required__c</fullName>
    <description>Information missing. Manual invoicing required.</description>
    <formula>OR(ISBLANK( Primary_Contact__c ), ISBLANK(Primary_Contact__r.Email))</formula>
    <inlineHelpText>Information missing. Manual invoicing required.</inlineHelpText>
    <label>Manual Invoice Required</label>
    <type>Checkbox</type>
</CustomField>