unpackaged/main/default/objects/Billing_Account__c/fields/NCM_Authorized_Products__c.field-meta.xml
<CustomField>
    <fullName>NCM_Authorized_Products__c</fullName>
    <inlineHelpText>NCM products that this billing account is authorized to be used for payment</inlineHelpText>
    <label>NCM Authorized Products</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20 Groups</fullName>
            </value>
            <value>
                <fullName>aXcessa</fullName>
            </value>
            <value>
                <fullName>ChargeZoom BA</fullName>
            </value>
            <value>
                <fullName>Echo</fullName>
            </value>
            <value>
                <fullName>Healthcheck</fullName>
            </value>
            <value>
                <fullName>NCMi Paid Seats</fullName>
            </value>
            <value>
                <fullName>NCMi Subscription</fullName>
            </value>
            <value>
                <fullName>NCMi Training Credits</fullName>
            </value>
            <value>
                <fullName>Proprietary</fullName>
            </value>
            <value>
                <fullName>Single Member Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>