unpackaged/main/default/objects/Billing_Account__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <inlineHelpText>Credit Card and ACH automatically send an Electronic Invoice where Electronic/Paper means no CC or ACH-Debit on file and SIN is sent for payment by client and Paper Only is where client wishes to receive only a Paper SIN</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>ACH-Debit</fullName>
            </value>
            <value>
                <fullName>Invoice Only</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Electronic Billing Statement</fullName>
                <isActive>false</isActive>
                <label>Electronic Billing Statement</label>
            </value>
            <value>
                <fullName>Paper Billing Statement</fullName>
                <isActive>false</isActive>
                <label>Paper Billing Statement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>