unpackaged/main/default/objects/Billing_Account__c/fields/Shipping_State_ISO__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State_ISO__c</fullName>
    <label>Shipping State (ISO)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>