unpackaged/main/default/objects/Billing_Account__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needing Validation</fullName>
                <default>true</default>
                <label>Needing Validation</label>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Credit Card Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>