unpackaged/main/default/objects/Billing_Account__c/fields/Ultimate_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultimate Parent Account (Code)</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>All_Billing_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>