unpackaged/main/default/objects/Billing_Account__c/fields/Ultimate_Parent_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Account_Id__c</fullName>
    <formula>Account__r.Ultimate_Parent_Account_ID_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultimate Parent Account Id</label>
    <type>Text</type>
</CustomField>