unpackaged/main/default/objects/Billing_Account__c/recordTypes/Billing_Account.recordType-meta.xml
<RecordType>
    <fullName>Billing_Account</fullName>
    <active>true</active>
    <label>Billing Account</label>
</RecordType>