unpackaged/main/default/objects/Billing_Account__c/recordTypes/Payable_Account.recordType-meta.xml
<RecordType>
    <fullName>Payable_Account</fullName>
    <active>true</active>
    <label>Payable Account</label>
</RecordType>