unpackaged/main/default/objects/Billing_Account__c/validationRules/City_required_to_Validate.validationRule-meta.xml
<ValidationRule>
    <fullName>City_required_to_Validate</fullName>
    <active>false</active>
    <description>A city is required in order to validate account.</description>
    <errorConditionFormula>AND(
     ISBLANK(     Billing_City__c  ),
     ISPICKVAL( Status__c , &quot;Validated&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Billing_City__c</errorDisplayField>
    <errorMessage>This field can not be blank when validating a Finance Account.</errorMessage>
</ValidationRule>