unpackaged/main/default/objects/Billing_Account__c/validationRules/Contact_required_to_Validate.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_required_to_Validate</fullName>
    <active>true</active>
    <description>A contact is required in order to validate account.</description>
    <errorConditionFormula>AND(
     ISBLANK( Primary_Contact__c ),
     ISPICKVAL( Status__c , &quot;Validated&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Primary_Contact__c</errorDisplayField>
    <errorMessage>This field can not be blank when validating a Finance Account.</errorMessage>
</ValidationRule>