unpackaged/main/default/objects/Billing_Account__c/validationRules/State_required_to_Validate.validationRule-meta.xml
<ValidationRule>
    <fullName>State_required_to_Validate</fullName>
    <active>false</active>
    <description>A state is required in order to validate account.</description>
    <errorConditionFormula>AND(
     ISBLANK(      Billing_State_Province__c ),
     ISPICKVAL( Status__c , &quot;Validated&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Billing_State_Province__c</errorDisplayField>
    <errorMessage>This field can not be blank when validating a Finance Account.</errorMessage>
</ValidationRule>