unpackaged/main/default/objects/Billing_Account__c/validationRules/Zipcode_required_to_Validate.validationRule-meta.xml
<ValidationRule>
    <fullName>Zipcode_required_to_Validate</fullName>
    <active>false</active>
    <description>A zipcode is required in order to validate account.</description>
    <errorConditionFormula>AND(
     ISBLANK(        Billing_Zip_Postal_Code__c   ),
     ISPICKVAL( Status__c , &quot;Validated&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Billing_Zip_Postal_Code__c</errorDisplayField>
    <errorMessage>This field can not be blank when validating a Finance Account.</errorMessage>
</ValidationRule>