unpackaged/main/default/objects/Billing_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CZ_CustomerId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>