unpackaged/main/default/objects/Billing_Account__c/listViews/All_Billing_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Billing_Accounts</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CZ_CustomerId__c</columns>
    <columns>Primary_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Billing_Account__c.Billing_Account</value>
    </filters>
    <label>All Billing Accounts</label>
</ListView>